# AssistantsAI

./: .env.example  .gitignore  Dockerfile  README.MD  pyproject.toml
app/: main.py  templates.py
app/api/: dependencies.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: assistant.py
app/services/: assistants.py  store.py
app/services/assistants/: assistants.py  errors.py
app/storages/: __init__.py  base.py  jsonl.py
