[tool.poetry]
name = "assistantsai"
version = "0.1.0"
description = ""
authors = ["Vladislav Sytiuk <vladislav.sytiuk@devit.group>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
python-dotenv = "^1.0.0"
black = "^23.11.0"
langchain = "^0.0.348"
openai = "^1.3.7"
jsonlines = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
